# Whis

./: README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/whisperandroid/: MainActivity.kt  WhisperApplication.kt
app/src/main/java/com/example/whisperandroid/audio/: AudioConverter.kt  AudioRecorder.kt
app/src/main/java/com/example/whisperandroid/data/db/: AppDatabase.kt  TranscriptionDao.kt  TranscriptionEntity.kt
app/src/main/java/com/example/whisperandroid/data/model/: ModelRepository.kt  WhisperModel.kt
app/src/main/java/com/example/whisperandroid/data/prefs/: AppPreferences.kt
app/src/main/java/com/example/whisperandroid/service/: NotificationHelper.kt  TranscriptionService.kt
app/src/main/java/com/example/whisperandroid/ui/history/: HistoryAdapter.kt  HistoryFragment.kt  HistoryViewModel.kt
app/src/main/java/com/example/whisperandroid/ui/settings/: SettingsFragment.kt  (+1 more)
app/src/main/java/com/example/whisperandroid/util/: DeviceMemoryUtils.kt  FileUtils.kt
app/src/main/java/com/example/whisperandroid/whisper/: WhisperBridge.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_stat_transcribe.xml  ic_tab_history.xml  ic_tab_settings.xml  ic_tab_transcribe.xml
app/src/main/res/layout/: fragment_history.xml  fragment_settings.xml  fragment_transcribe.xml  item_model.xml  item_transcription.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/wrapper/: README.md
(+2 files in other folders)
